...
        {t(
          "Organize your board game collection, track your matches and connect with other players.",
        )}
      </Typography>
      <View className="mt-2">
        <Button variant="primary" onPress={() => router.push("/sign-in")}>
          {t("Sign in / Register")}
        </Button>
      </View>
    </View>
  );
}

